# vICE

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pages.yml
simulator/: .coveragerc  RUNS.md  __init__.py  apis.py  app.py  cli.py  core.py  design.py  fuels.py  io.py  main.py  turbo.py  utils.py
simulator/commands/: commands.txt  coverage-commands.txt
simulator/docs/: Makefile  api.rst  conf.py  index.rst
simulator/in/: Blanquart2018.yaml  JetSurf2.yaml  compressor_efr71_grid.csv  compressor_efr71_speed_lines.csv  compressor_efr71_speedlines.csv  sample_methanol_engine.json  sample_si_e85_engine.json  sample_si_engine.json  sample_si_engine_phi0.9.json  sample_si_engine_phi1.0.json  sample_si_engine_phi1.1.json  sample_si_engine_turbo.json  sample_si_engine_turbo_12cyl.json  sample_si_engine_turbo_4cyl.json  sample_si_engine_turbo_4cyl_bp.json  sample_si_engine_turbo_8cyl.json  sample_si_methanol_engine.json  template_si_engine.json  turbine_gt4088_like.csv
simulator/pumps/: __init__.py  affinity.py  cavitation.py  combined.py  curves.py  plotting.py  power.py  pump_map.py  system_curve.py  water_pump.py
simulator/pumps/data/pump_curves/: figure_11_7_a.json  figure_11_7_b.json  frank_white_32in_1170rpm.json  mock_panther_coolant_pump.json  model_4010.json  model_4013.json
simulator/pumps/in/: cooling_panther_mock.json  water_pump_frank_white_example_11_6.json  water_pump_frank_white_example_11_7_parallel.json  water_pump_frank_white_example_11_8_series.json
simulator/tests/: test_cli_smoke.py  test_core_basic.py
simulator/thermo/: __init__.py  equilibrium.py  reactor0d.py  species.py  thermo_state.py
simulator/thermo/tools/: equilibrium_flame.py  equilibrium_flame_compare.py
simulator/tools/: bsfc_sweep_phi.py  tool_bsfc_contours.py  tool_bsfc_map_epa.py  tool_bsfc_table.py  tool_bsfc_vs_displacement.py  tool_bsfc_vs_phi_rc.py  tool_bsfc_vs_speed_rc.py  tool_compressor_map_efr71.py  tool_cycle_thermo_plot.py  tool_flame_summary.py  tool_full_load_sweep.py  tool_generate_template_input.py  tool_indicator_from_result.py  tool_turbine_map_gt4088.py  tool_turbo_match_opline.py  turbo_match.py
